[gd_scene load_steps=4 format=3 uid="uid://cwulc8kgwxlfe"]

[ext_resource type="Texture2D" uid="uid://c211of1yjljgw" path="res://icon.svg" id="1_gq0rh"]
[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_xwkit"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42cxy"]
size = Vector2(63, 63)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource("1_xwkit")
enemy_image = ExtResource("1_gq0rh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_42cxy")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_42cxy")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_gq0rh")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 200.0
avoidance_enabled = true
radius = 5.0

[node name="NavigationTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="RangedAttackTimer" type="Timer" parent="."]

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_damage_area_body_exited"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="NavigationTimer" to="." method="_on_navigation_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="RangedAttackTimer" to="." method="_on_ranged_attack_timer_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
